5604: Check bytecode verification flags
look into JAVA_ARGUMENTS attribute
add also tests